# FutureConnect

./: CHANGELOG.md  README.md
ai_training/: Cargo.toml
cross_platform/future-connect/: package.json
cross_platform/future-connect/src-tauri/: Cargo.toml  tauri.conf.json
cross_platform/future-connect/src-tauri/src/: main.rs
web/backend/: docker-compose.yaml
web/backend/microservice/Auth/: .gitignore  package.json
web/backend/microservice/Auth/src/: index.ts  setup.ts
web/backend/microservice/Auth/src/config/: jwt.config.ts
web/backend/microservice/Auth/src/database/: schema.ts
web/backend/microservice/Auth/src/router/: auth.route.ts  (+3 more)
web/backend/microservice/Authentication/: .env  package.json
web/backend/microservice/Authentication/src/: index.ts
web/backend/microservice/GameServer/: Cargo.toml
web/backend/microservice/Gateway/: package.json
web/backend/microservice/Gateway/src/: index.ts
web/backend/microservice/IntelligenceEngine/: Cargo.toml
web/backend/microservice/Marketplace/: package.json
web/backend/microservice/Marketplace/src/: index.ts
web/backend/microservice/RealtimeHub/: .env  Cargo.toml
web/backend/microservice/RealtimeHub/src/: db.rs  main.rs  ws.rs
web/backend/microservice/RealtimeHub/tests/: auth_test.rs
web/backend/microservice/Social/: .env.example  package.json  test-social.ts
web/backend/microservice/Social/src/: index.ts  setup.ts
web/backend/microservice/Social/test/: comment.test.ts  search.test.ts  upload.test.ts
web/frontend/FutureConnectFrontend/: index.html  package-lock.json  package.json
(+64 files in other folders)
